test/analyzer/input_programs/invalid_programs/program29.tea
# Valid since there are no duplicate fields

a := class:
  init: () -> "hello world"
  b: 4
  b: 5
end